Delete a DCHECK which triggers frequently in dev.

It's hit when creating a new window in fullscreen. The linked bug
mentions leaving it in place as a reminder to add a test, but I keep
getting bit. The bug should sufficiently document the need for a test.

Bug: 844482
Change-Id: Ibbd1cf24864c8122e82ba189072dcc2711afc326
Reviewed-on: https://chromium-review.googlesource.com/c/1482558
Auto-Submit: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#634705}
Former-commit-id: 45479a35d721202b52a494cebfed0f8f0df1b802